--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,12 @@ h2,h3{
     font-family: 'Roboto Slab', serif;
 }
 
+header{
+    background-image: url("../images/bannerPrincipal.jpg");
+    background-size:cover;
+    background-position: center;
+}
+
 .row {
     height: 500px;
 
@@ -26,7 +32,7 @@ h2,h3{
 }
 
 #bannerPrincipal {
-    background-color: cornflowerblue;
+    background-color:;
 }
 
 #descripcionPrograma {
