--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0090d8;
+  --primary: #02182b;
   --secondary: #0090d8;
   --success: #28a745;
   --info: #17a2b8;
