--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,6 @@ h2,h3{
     font-family: 'Roboto Slab', serif;
 }
 
-header{
-    background-image: url("../images/bannerPrincipal.jpg");
-    background-size:cover;
-    background-position: center;
-}
-
 .primary{
     background-color: #448fa3;
 }
@@ -42,13 +36,19 @@ header{
     background-color: #ced8db;
 }
 
-.row {
-    height: 500px;
+#obtenYa img{
+    height: 450px;
+    width: 400px;
+}
 
+header{
+    background-image: url("../images/bannerPrincipal.jpg");
+    background-size:cover;
+    background-position: center;
 }
 /**Todos las filas**/
-#bannerPrincipal, #descripcionPrograma, #iconos, #fernandoCelis, #contador, #listonListoUnirte, #descripcionContinuum, #facebookComentarios, #logosPatrocinadores {
-
+.dark h1,.dark h2,.dark h3,.dark h4,.dark h5,.dark h6{
+    color: #d7263d;
 }
 
 #bannerPrincipal {
