--- a/css/styles.css
+++ b/css/styles.css
@@ -110,14 +110,29 @@ header{
   padding: 50px 0 50px 0;
 }
 
+#contador h1{
+  text-align: center;
+}
+
 /*Liston Pregunta*/
 #listonListoUnirte{
   padding: 50px 0 50px 0;
 }
 #listonListoUnirte h1{
   font-size: 37px;
+  text-align: center;;
 }
 
+/*Descripcion Programa continuum*/
+#descripcionContinuum{
+  padding: 30px 0;
+}
+/*Testimonios*/
+#testimonios{
+  padding: 30px 0 30px 0;
+  background-color: #02182b;
+  color:#D7263D;
+}
 /*LogosPatrocinadores*/
 #logosPatrocinadores{
   height: 200px;
