--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 h1{
     font-family: 'Oswald', sans-serif;
-    font-size: 50px !important: /*No agarra*/
+    font-size: 48px !important;
 }
 h2,h3{
     font-family: 'Roboto Slab', serif;
@@ -64,10 +64,15 @@ header{
   margin: 25px 0 25px 0;
 }
 #bannerPrincipal h1{
-  color:#0090d8;
+  color:#ced8db;
+  font-size:55px !important;
+}
+#bannerPrincipal p {
+    margin: 25px 0 25px 0 ;
+    font-size: 21px;
 }
 #bannerPrincipal #suscribetePrograma{
-  margin: 25px 0 25px 0;
+  margin: 25px 0 35px 0;
 }
 /*Banner principal*/
 #descripcionPrograma{
@@ -124,8 +129,7 @@ h3#dias, h3#horas, h3#minutos, h3#segundos {
   padding: 50px 0 50px 0;
 }
 #listonListoUnirte h1{
-  font-size: 37px;
-  text-align: center;;
+  text-align: center;
 }
 
 /*Descripcion Programa continuum*/
@@ -134,13 +138,19 @@ h3#dias, h3#horas, h3#minutos, h3#segundos {
 }
 /*Testimonios*/
 #testimonios{
-  padding: 30px 0 30px 0;
+  padding: 50px 0 50px 0;
   background-color: #02182b;
   color:#D7263D;
 }
 
 #testimonios .row{
   height: 250px;
+}
+
+#testimonios h1 {
+    font-size: 37px;
+    text-align: center;
+    text-transform: uppercase;
 }
 /*LogosPatrocinadores*/
 #logosPatrocinadores{
