--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ h3#dias, h3#horas, h3#minutos, h3#segundos {
 
 #contador h1{
   text-align: center;
+  padding-bottom: 30px;
 }
 
 /*Liston Pregunta*/
